unpackaged/main/default/objects/Proceso__c/Proceso__c.object-meta.xml
<CustomObject>
    <label>Proceso</label>
    <nameField>
        <label>ID de Proceso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procesos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>