unpackaged/main/default/objects/Proceso__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>