unpackaged/main/default/objects/Proceso__c/fields/ExtensionPeriodoPropuesto__c.field-meta.xml
<CustomField>
    <fullName>ExtensionPeriodoPropuesto__c</fullName>
    <label>ExtensionPeriodoPropuesto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>