unpackaged/main/default/objects/Proceso__c/fields/IDAprobador__c.field-meta.xml
<CustomField>
    <fullName>IDAprobador__c</fullName>
    <label>IDAprobador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>