unpackaged/main/default/objects/Proceso__c/fields/IDProceso__c.field-meta.xml
<CustomField>
    <fullName>IDProceso__c</fullName>
    <externalId>true</externalId>
    <label>IDProceso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>