unpackaged/main/default/objects/Proceso__c/fields/IDSolicitante__c.field-meta.xml
<CustomField>
    <fullName>IDSolicitante__c</fullName>
    <label>IDSolicitante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>