unpackaged/main/default/objects/Proceso__c/fields/Justificacion__c.field-meta.xml
<CustomField>
    <fullName>Justificacion__c</fullName>
    <label>Justificacion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>