unpackaged/main/default/objects/Proceso__c/fields/Objeto_a_Aprobar__c.field-meta.xml
<CustomField>
    <fullName>Objeto_a_Aprobar__c</fullName>
    <label>Objeto a Aprobar</label>
    <length>50</length>
    <type>Text</type>
</CustomField>