unpackaged/main/default/objects/Proceso__c/fields/Objeto_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Objeto_Nombre__c</fullName>
    <label>Objeto Nombre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>