unpackaged/main/default/objects/Proceso__c/fields/PeriodoActual__c.field-meta.xml
<CustomField>
    <fullName>PeriodoActual__c</fullName>
    <label>PeriodoActual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>