unpackaged/main/default/objects/Proceso__c/fields/PeriodoRegistro__c.field-meta.xml
<CustomField>
    <fullName>PeriodoRegistro__c</fullName>
    <label>PeriodoRegistro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>