unpackaged/main/default/objects/Proceso__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>StartDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>